Interpreter/Examples/bad/example11.jam
/* Wrong type in if */
main {
    if (2+2) {
        print("NOT OK");
    }
    fi
}
